# koha-data-extractor

./: .gitignore  Readme.md  extractData  extractSimpleSchoolData  fixDateAccessioned  pyproject.toml
kohaData/: configuration.py
